login del chpri, era mejor el mio

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -97,8 +97,10 @@
 .btn-outline:hover {
   background-color: #eaf010; /* Fondo amarillo al hacer hover */
   color: #232324; /* Texto negro al hacer hover */
+  font-weight: 600;
   border-color: #eaf010; /* Borde amarillo */
   outline: none; /* Quita el borde extra en hover */
+  box-shadow: 0px 0px 3px #eaf010;
 }
 
 
