si se borra inscripcion, se borra el equipo del grupo

--- a/app/templates/deportes/partidos.html
+++ b/app/templates/deportes/partidos.html
@@ -223,14 +223,14 @@
         <div class="r18-items">
         <div class="r18-columns">
             <div class="r18-team-l" data-score="1">
-            <span class="r18-name">Croacia</span>
+            <span class="r18-name">{{ equipos[0].nombre }}</span>
             <span class="flag-icon flag-icon-hr"></span>
             <span class="r18-score">2</span>
             </div>
             <div class="r18-team-r" data-score="2">
             <span class="r18-score">1</span>
             <span class="flag-icon flag-icon-gb"></span>
-            <span class="r18-name">Inglaterra</span>
+            <span class="r18-name">{{ equipos[1].nombre }}</span>
             </div>
         </div>
         <div class="r18-time">
